--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
-ul{
-  list-style: ;
+@media screen and (min-width: 780px) {
+  .item::selection{
+    background: url(errorBackground) center/cover non-repeat;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  html{
+    scroll-behavior:smooth;
+  }
+
 }
